--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
+        python-version: "3.10.4"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -34,6 +34,14 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Pyre Action
+  # You may pin to the exact commit or the version.
+  # uses: facebook/pyre-action@60697a7858f7cc8470d8cc494a3cf2ad6b06560d
+      uses: facebook/pyre-action@v0.0.1
+      with:
+        repo-directory: './'
+        requirements-path: 'requirements.txt'
+    
     - name: Test with pytest
       run: |
         pytest
