--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,13 +34,11 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Pyre Action
-  # You may pin to the exact commit or the version.
-  # uses: facebook/pyre-action@60697a7858f7cc8470d8cc494a3cf2ad6b06560d
-      uses: facebook/pyre-action@v0.0.1
-      with:
-        repo-directory: './'
-        requirements-path: 'requirements.txt'
+    #- name: Pyre Action
+      #uses: facebook/pyre-action@v0.0.1
+     # with:
+        #repo-directory: './'
+        #requirements-path: 'requirements.txt'
     
     - name: Test with pytest
       run: |
