--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,12 +34,6 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    #- name: Pyre Action
-      #uses: facebook/pyre-action@v0.0.1
-     # with:
-        #repo-directory: './'
         #requirements-path: 'requirements.txt'
-    
-    - name: Test with pytest
-      run: |
-        pytest
+    - name: Robot Framework
+      uses: joonvena/robotframework-docker-action@v1.0
